--- a/webpages-vt/shd_new_device.htm
+++ b/webpages-vt/shd_new_device.htm
@@ -181,11 +181,11 @@
 			
 			$scope.navi2Device = function()
 			{
-				 var goBackResult = confirm('Are you sure discard changes and go Back ?');
-				 if(goBackResult)
-				 {
+				 //var goBackResult = confirm('Are you sure discard changes and go Back ?');
+				 //if(goBackResult)
+				 //{
 					location.replace('/');
-				 }
+				 //}
 			}
 			$scope.save = function()
 			{
